package lowleveldesign.snakeandladder;

public enum GameStatus {
    NOT_STARTED,
    RUNNING,
    FINISHED
}
